tests/unit/snapshots/unit__tui_snapshot_test__empty_state_render.snap
---
source: tests/unit/tui_snapshot_test.rs
expression: output
---
┌ Messages ────────────────────────────────────────────────┐
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
 [F:0↑ 14/0]                                                
┌ Input (Enter to send, Ctrl+C to quit) ───────────────────┐
│                                                          │
└──────────────────────────────────────────────────────────┘
