tests/unit/snapshots/unit__tui_snapshot_test__input_only_render.snap
---
source: tests/unit/tui_snapshot_test.rs
expression: output
---
┌ Messages ────────────────────────────────────────────────┐
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
┌ Input (Enter to send, Ctrl+C to quit) ───────────────────┐
│Hello                                                     │
└──────────────────────────────────────────────────────────┘
