tests/unit/snapshots/unit__tui_snapshot_test__multiline_message_render.snap
---
source: tests/unit/tui_snapshot_test.rs
expression: output
---
┌ Messages ────────────────────────────────────────────────┐
│Claude:                                                   │
│Here's a list:                                            │
│- First item                                              │
│- Second item                                             │
│- Third item                                              │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
┌ Input (Enter to send, Ctrl+C to quit) ───────────────────┐
│                                                          │
└──────────────────────────────────────────────────────────┘
