tests/unit/snapshots/unit__tui_snapshot_test__single_assistant_message_render.snap
---
source: tests/unit/tui_snapshot_test.rs
expression: output
---
┌ Messages ────────────────────────────────────────────────┐
│Patina:                                                   │
│Hello! How can I help you today?                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
 [F:0↑ 14/3]                                                
┌ Input (Enter to send, Ctrl+C to quit) ───────────────────┐
│                                                          │
└──────────────────────────────────────────────────────────┘
