tests/unit/snapshots/unit__tui_snapshot_test__single_user_message_render.snap
---
source: tests/unit/tui_snapshot_test.rs
expression: output
---
┌ Messages ────────────────────────────────────────────────┐
│You:                                                      │
│Hello, Claude!                                            │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
┌ Input (Enter to send, Ctrl+C to quit) ───────────────────┐
│                                                          │
└──────────────────────────────────────────────────────────┘
