tests/unit/snapshots/unit__tui_snapshot_test__status_bar_full_worktree_status.snap
---
source: tests/unit/tui_snapshot_test.rs
expression: output
---
┌ Messages ────────────────────────────────────────────────────────────────────┐
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 wt/experiment ●2 ↑1                                                            
┌ Input (Enter to send, Ctrl+C to quit) ───────────────────────────────────────┐
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
