tests/unit/snapshots/unit__tui_snapshot_test__streaming_response_render.snap
---
source: tests/unit/tui_snapshot_test.rs
expression: output
---
┌ Messages ────────────────────────────────────────────────┐
│You:                                                      │
│Tell me about Rust                                        │
│                                                          │
│Patina: ⠋                                                 │
│Rust is a systems programming language that...            │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
 [F:0↑ 14/5]                                                
┌ Input (Enter to send, Ctrl+C to quit) ───────────────────┐
│                                                          │
└──────────────────────────────────────────────────────────┘
